fix bottom scrollbar, make layout more responsive

--- a/source/_static/website.css
+++ b/source/_static/website.css
@@ -5,11 +5,36 @@ body {
 
 #content-container {
   margin-bottom: 20px;
-  padding: 50px;
   background-color: #FFF;
   -webkit-box-shadow: 0 0px 4px rgba(0, 0, 0, 0.25), inset 0 0px 0 rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 0px 4px rgba(0, 0, 0, 0.25), inset 0 0px 0 rgba(0, 0, 0, 0.1);
   box-shadow: 0 0px 4px rgba(0, 0, 0, 0.25), inset 0 0px 0 rgba(0, 0, 0, 0.1);
+}
+
+#content-container #page {
+  margin: 50px;
+}
+
+@media (max-width: 767px) {
+  #content-container #page {
+    margin: 30px;
+  }
+}
+
+@media (max-width: 480px) {
+  #content-container {
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+  }
+
+  #content-container #page {
+    margin: 0px;
+  }
+
+  body {
+    background-image: none;
+  }
 }
 
 .read-more {
